--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Sammy Chen",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.9.1",
+    "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.7.0",
     "proxy-middleware": "^0.15.0",
     "react": "^15.0.2",
