--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.4",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.7.0",
+    "mysql": "^2.11.1",
     "proxy-middleware": "^0.15.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
@@ -21,7 +22,9 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "sequelize": "^3.23.3",
+    "sqlite3": "^3.1.4"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
