--- a/package.json
+++ b/package.json
@@ -12,18 +12,28 @@
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "body-parser": "^1.15.1",
+    "classnames": "^2.2.5",
     "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "flexbox-grid": "^1.0.0",
+    "flexboxgrid": "^6.3.0",
+    "flexgrid": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.15.1",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
+    "node-sass": "^3.8.0",
     "proxy-middleware": "^0.15.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-flexbox-grid": "^0.9.6",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^3.2.2",
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4"
   },
