--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-persist": "^3.2.2",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.2",
     "sequelize": "^3.23.3",
@@ -49,6 +51,7 @@
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.4.2",
     "eslint-plugin-react": "^5.1.1",
+    "redux-devtools": "^3.3.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
