--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.9.1",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.1",
     "classnames": "^2.2.5",
     "express": "^4.13.4",
