--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flexgrid": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.15.1",
+    "mocha": "^2.5.3",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "node-sass": "^3.8.0",
