--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.2",
     "sequelize": "^3.23.3",
-    "sqlite3": "^3.1.4"
+    "sqlite3": "^3.1.4",
+    "supertest-as-promised": "^3.2.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
